# matthewdeanmartin

./: .gitignore  .markdownlintrc  .pre-commit-config.yaml  AGENT.md  Makefile  Pipfile  README.bak.md  README.en.md  README.md  README.sideprojects.md  SOURCE.md  SOURCE_DATA.md  build.sh  pyproject.toml  readme_cms.toml  reports.sh  resume.py
.github/workflows/: deploy.yml
data/: identity.toml  old.skills.toml  projects.toml  pypi_projects.toml  readme_cms.toml  resumes.toml  skills.toml  work_experience.toml
data_sample/: identity.toml  projects.toml  pypi_projects.toml  readme_cms.toml  skills.toml  work_experience.toml
dead_code/: Justfile  old.skills.toml
docs/: experience.html  index.html  projects.html  skill_detail.html
docs/apis/: config.json  identity.json  projects.json
docs/apis/experience/: index.json
docs/apis/experience/by-id/: aboutweb-2012-2013.json  artemis-aretum-2019-2024.json  artemis-aretum-2019-present.json  asrc-federal-2019.json  benten-technologies-2014.json  booz-allen-2024-current.json  burson-marsteller-bcw-2016-2019.json  caci-2013-2014.json  dynamics-research-corp-2005-2008.json  fors-marsh-group-2015-2016.json  prince-william-county-1998-2005.json  procentrix-2008-2012.json
docs/apis/experience/pages/: 1.json
docs/apis/projects/: index.json
docs/apis/projects/by-slug/: Hicmah.json  ai_fish_tank.json  ai_shell.json  always_free.json  bash2gitlab.json  bash_logging_with_timer.json  basic_python.json  bills_with_nlp.json  bitrab.json  blog.json  blog_comments.json  break_in_to_it.json  bug_trail.json  bug_trail_core.json  c7n_make.json  caniuseonlywheels.json  chatgpt_presentation.json  cheese_grader.json  cli_tool_audit.json  convenient_py_devcontainer.json  dashc.json  dedlin.json  disemoji.json  examexam.json  examexam_exams.json  falling_food.json  feed_thing.json  fermi_problems.json  find_known_secrets.json  fish_tanks.json  gh_status.json  git_help.json  git_mirror.json  gizskyon.json  hermetic.json  hissbytenotation.json  interview_challenges.json  is_it_up.json  isopod_angular.json  isopod_cob.json  (+69 more)
docs/apis/projects/pages/: 1.json  2.json  3.json
docs/apis/pypi/: index.json
docs/apis/pypi/by-name/: ai-shell.json  awscli-local-win.json  bash2gitlab.json  bitrab.json  bug-trail-core.json  bug-trail.json  caniuseonlywheels.json  cli-tool-audit.json  cli_tool_audit.json  dashc.json  dedlin.json  examexam.json  find-known-secrets.json  git-mirror.json  hermetic-seal.json  hissbytenotation.json  jiggle-version.json  mainframer.json  markdown-to-json.json  markmodule.json  markpickle.json  mastodon-finder.json  metametameta.json  navio-builder-win.json  openmock.json  pyanide.json  pycodetags-issue-tracker.json  pycodetags.json  pydoc-fork.json  pypi-librarian.json  python3-alias.json  random-names.json  raypack.json  skip-trace.json  so-pip.json  sparkle-log.json  termcolor-whl.json  terminaltables-whl.json  terminaltables3.json  totalhelp.json  (+4 more)
docs/apis/pypi/pages/: 1.json
docs/apis/resumes/: index.json
docs/apis/resumes/by-id/: architect.json  cloud-engineer.json  long-format.json  novelty-resume.json  one-page.json  resume-2015.json  resume-2024-novelty.json
docs/apis/resumes/pages/: 1.json
docs/md/: README.en.md  README_ALT.en.md  projects.md
docs/skills/: bash.html  c.html  cobol.html  css.html  django.html  docker.html  git.html  github.html  gitlab-pipelines.html  go.html  html.html  html5.html  java.html  javascript.html  json.html  jupyter-notebook.html  makefile.html  python.html  ruby.html  rust.html  shell.html  terraform.html  typescript.html
docs/swagger/: index.html  openapi.yml
docs_app/: TODO.md  er.mermaid
scripts/: make_prompt.sh  make_source.sh  make_source_data.sh  make_source_ui.sh  open_site.py
src/: GHIP_001_Specification.md  GHIP_001_Specifications.md  README.md  check_mentions.py
src/github_is_my_cms/: GHIP_001_Specifications.md  __about__.py  audit_links.py  b.py  builder.py  builder_api.py  cli.py  config.py  data_sources.py  generate_skills.py  logging_config.py  models.py
src/github_is_my_cms/data/: identity.toml  projects.toml  pypi_projects.toml  readme_cms.toml
src/github_is_my_cms/swagger/: index.html.j2
src/github_is_my_cms/templates/default/components/: identity_graph.md.j2
src/github_is_my_cms/templates/default/layouts/: master.html.j2  master.md.j2
src/github_is_my_cms/templates/default/pages/: README.en.md.j2  index.html.j2  projects.html.j2  projects.md.j2
src/github_is_my_cms/templates/default/pages/swagger/: openapi.yml
src/github_is_my_cms/templates/layouts/: master.html.j2  master.md.j2
src/github_is_my_cms/templates/pages/: projects.html.j2
src/github_is_my_cms/templates/pages/swagger/: openapi.yml
src/github_is_my_cms/templates/professional/components/: identity_graph.md.j2
src/github_is_my_cms/templates/professional/layouts/: master.html.j2  master.md.j2
src/github_is_my_cms/templates/professional/pages/: README.en.md.j2  README_ALT.en.md.j2  experience.html.j2  index.html.j2  projects.html.j2  projects.md.j2  skill_detail.html.j2
src/readme_maker/: GHIP_001_Specifications.md  builder.py  cli.py  config.py  data_sources.py  models.py
src/readme_maker/templates/layouts/: master.html.j2  master.md.j2
src/readme_maker/templates/pages/: README.en.md.j2  README_OLD.en.md.j2
src/tests/: test_builder.py  test_config_loader.py  test_data_sources.py  test_generate_skills_and_audit_links.py  test_models.py
